updated Swagger docs
